Sun Mar 22 19:01:36 1998  Owen Taylor  <owt1@cornell.edu>

	* gdk/gdkcolor.c: Fixes to allow GTK to work with colormaps
	  that aren't 256 entries long. (colormap->colors is
	  now dynamically allocated)

Sun Mar 22 16:25:46 1998  Owen Taylor  <owt1@cornell.edu>

	* gtk/gtkmain.c (gtk_init): fixes to locale checks

	* gtk/testgtk.c (create_dnd): Create the dnd icons separately
	  to avoid strange interactions with shapes demo.

	* gtk/gtkentry.[ch]: 
	  - Limit the length of the text to 2048 to prevent long delays
	  - Fix problems with buffer overruns
	  - Draw only the onscreen portion of the text to prevent wrapping
	    of shorts in the X drawing code.
	  - Keep track of character positions and x-offsets to speed
	    up algorithms.

Sun Mar 22 11:37:51 CST 1998 Shawn T. Amundson <amundson@gtk.org>

	* gtk/gtkcolorsel.c: 
	* gtk/gtkfilesel.c: use button_box for buttons

Sat Mar 21 19:07:01 1998  Owen Taylor  <owt1@cornell.edu>

	* gtk/testgtk.c (dnd_drop): Don't respond to drops when
	  grab is in effect. (workaround)

	* gdk/gdkfont.c (gdk_fontset_load): More details on
	  error messages.

	* gdk/gdk.c: Translate va_list to XVaNestedList instead
	  of just casting it.

	* gtk/gtkmain.c: Make temporary copy of string returned by
	  setlocale, since it may be changed by subsequent calls.

Sat Mar 21 22:54:31 1998  Tim Janik  <timj@gtk.org>

	* gtk/gtkhandlebox.h:
	* gtk/gtkhandlebox.c: major overhaul of the code, fixed all
	known bugs (hopefully ;).

Sat Mar 20 15:33:17 1998  Tim Janik  <timj@gtk.org>

	* gtk/gtkwidget.c (gtk_widget_real_show): queue the resize for the
 	parent.

Thu Mar 19 02:00:50 1998  Tim Janik  <timj@gtk.org>

	* gtk/gtkwidget.c (gtk_widget_unrealize): unset flags after emission,
	especially GTK_MAPPED, since that might not have been taken care of
	by an UNMAP emission.

Sat Mar 21 10:39:02 CET 1998 Paolo Molaro <lupus@debian.org>

	* gtk/gtkcombo.[ch] "activate" signal can be disabled now
